--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "@types/lodash": "^4.17.14",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
