--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@types/lodash": "^4.17.14",
+    "axios": "^1.7.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
